--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,4 @@
 DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=project_database_name
-
-#just if this required
-# DB_HOST=mysql-db 
-# DB_PORT=3311
+DB_PORT=3311
